--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -36,7 +36,7 @@
                 </a>
             </div>
 
-            <a href="/account/login"><div align="right" style="padding-right: 15%; color: white">Login</div></a>
+            <!-- <a href="/account/login"><div align="right" style="padding-right: 15%; color: white">Login</div></a> -->
         </div>
 
 
