--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title></title>
 </head>
-<body>
---------- 그냥 로그인 ---------
+<body style="background: url('/img/index/background.jpg') no-repeat center center fixed; --webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover">
+Administrator Login
 <form action="/account/login" method="post">
-    <input type="text" name="id" placeholder="userid">
+    <input type="text" name="id" placeholder="userid"><br>
     <input type="text" name="password" placeholder="password">
     <input type="submit" value="login">
 </form>
