add trim in timeline

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -226,13 +226,13 @@
                                 {% if username == 'dodream' or username == 'sinmyung' %}
                                     <a href="/account/setting?promise={{ data['promise_title'] }}" class="cd=read-more" style="float: left;">Edit</a>
                                 {% endif %}
-                                    <a href="#{{ data['promise_title'] }}" class="cd-read-more modal-trigger" style="float: right; color: #7478b9; font-weight: bold">Read more</a>
+                                    <a href="#{{ clever_function(data['promise_title']) }}" class="cd-read-more modal-trigger" style="float: right; color: #7478b9; font-weight: bold">Read more</a>
 
                                    <!-- <span class="cd-date">{{ data['promise_date'] }}</span> -->
                                 </div>
                             </div>
 
-                            <div id="{{ data['promise_title'] }}" class="modal modal-fixed-footer">
+                            <div id="{{ clever_function(data['promise_title']) }}" class="modal modal-fixed-footer">
                                 <div class="modal-content">
                                     <div class="slider">
                                         <ul class="slides">
