--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -33,6 +33,12 @@
 
 
     <style>
+	
+	.promise-title {
+	    color: #7478b9; 
+	font-size: 35px; 	
+	font-weight: normal;
+	}
         .progress-button{
 	display: inline-block;
 	font-size:24px;
@@ -205,7 +211,7 @@
                                         </div>
                                     </div></a>
                                 <br>
-                                    <h1 style="color: #7478b9; font-size: 50px; font-weight: normal">{{ data['promise_title'] }}</h1>
+                                    <h1 class="promise-title">{{ data['promise_title'] }}</h1>
 
 
 
