--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -567,8 +567,15 @@
 
 })(jQuery);
 
-
-
     </script>
+
+    <script>
+jQuery(document).ready(function($) {
+        $(".scroll").click(function(event){
+                event.preventDefault();
+                $('html,body').animate({scrollTop:$(this.hash).offset().top}, 500);
+        });
+});
+</script>
 </body>
 </html>
