--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,12 +1,25 @@
 <html>
 <head>
-    <title>당신을 위한 서비스. 이끌림</title>
+    <title>당신을 위한 서비스. 이끌i림</title>
+	<style>
+	a:visited {
+		text-decoration:none;
+}
+</style>
     </head>
 <body style="background: url('img/index/background.jpg') no-repeat center center fixed; --webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover">
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
     <div>
         <div style="height: 45%;">
             <div align="center">
-                <img src="img/index/mainlogo.png" style="max-width: 100%; max-height: 100%;">
+                <img src="img/index/mainlogo.png" style="width: 404px; height: 259px; padding-left:30px;">
             </div>
         </div>
         
@@ -18,20 +31,20 @@
             <div style="height: 15%">
             </div>
             <div style="width: 40%; height: inherit; float: right;">
-                <a href="/timeline">
+                <a href="/timeline" class="link">
                 <div style="height: 100%; width: 97px;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
                     <img src="img/index/go_timeline.png" >
-                    <h3 style="text-align: center; color: #ffffff;">이행도</h3>
+                    <h3 style="text-align: center; color: #ffffff; margin-top:-7px; display:block;">이행도</h3>
                 </div>
                 </a>
             </div>
             <div style="width: 20%; height: inherit; float: right;"></div>
 
             <div style="width: 40%; height: inherit; float: right;">
-                <a href="/select">
+                <a href="/select" class="link">
                 <div style="width: 91px; float: right;" onMouseOver="this.style.opacity='.6'; this.style.filter='alpha(opacity=60)'" onMouseOut="this.style.opacity='1.0'; this.style.filter='alpha(opacity=100)'">
                     <img src="img/index/go_select.png">
-                    <h3 style="text-align: center; color: #ffffff">이끌림</h3>
+                    <h3 style="text-align: center; color: #ffffff; display:block; margin-left:30px; margin-top:-7px;">이끌림</h3>
                 </div>
                 </a>
             </div>
