Add Timeline Read More images

--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -243,28 +243,28 @@
                                     <div class="slider">
                                         <ul class="slides">
                                             <li>
-                                            <img src="http://lorempixel.com/580/250/nature/2"> <!-- random image -->
+                                            <img src="img/checklist/{{ data['promise_date'] }}.png"> <!-- random image -->
                                                 <div class="caption left-align">
                                                     <h3>{{ data['promise_title'] }}</h3>
                                                     <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
                                                 </div>
                                             </li>
                                             <li>
-                                                <img src="http://lorempixel.com/580/250/nature/2"> <!-- random image -->
+                                                <img src="img/checklist/{{ data['promise_date'] }}.png"> <!-- random image -->
                                                 <div class="caption left-align">
                                                     <h3>{{ data['promise_title'] }}</h3>
                                                     <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
                                                 </div>
                                             </li>
                                             <li>
-                                                <img src="http://lorempixel.com/580/250/nature/3"> <!-- random image -->
+                                                <img src="img/checklist/{{ data['promise_date'] }}.png"> <!-- random image -->
                                                 <div class="caption right-align">
                                                     <h3>{{ data['promise_title'] }}</h3>
                                                     <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
                                                 </div>
                                             </li>
                                             <li>
-                                                <img src="http://lorempixel.com/580/250/nature/4"> <!-- random image -->
+                                                <img src="img/checklist/{{ data['promise_date'] }}.png"> <!-- random image -->
                                                 <div class="caption center-align">
                                                     <h3>{{ data['promise_title'] }}</h3>
                                                     <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
