--- a/app/templates/timeline.html
+++ b/app/templates/timeline.html
@@ -274,7 +274,7 @@
                                     </div>
                                 </div> <!-- end of modal-content -->
                                 <div class="modal-footer">
-                                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Agree</a>
+                                <a href="#!" class="modal-action modal-close waves-effect waves-green btn-flat ">Close</a>
                                 </div> <!-- end of modal-footer -->
                             </div> <!-- fixed by ner0, modal-fixed-footer  -->
 
