Optimize background properties 사용하지 않는 html 삭제

--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -5,10 +5,9 @@
     <title></title>
 <style>
     html {
-      background-image: url('../static/images/attract/background.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      height: 100%;
+        background-size: cover;
+        background: url('../static/images/attract/background.png') no-repeat;
+        height: 100%;
       width: 100%;
       html-height: 100%;
     }
