--- a/app/templates/domyung/timeline.html
+++ b/app/templates/domyung/timeline.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html lang="en" class="no-js">
 <head>
+    {% if error %}
+        <script>alert("{{ error }}");</script>
+    {% endif %}
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -177,15 +180,10 @@
 
                     {% for year in years %}
                         <a name="{{ year }}"><div class="cd-timeline-block-big" style="border-top: 10px"></a>
-                        {% if promise_data[year|string][0]['promise_party'] == 2 %}
-                            <!-- dodream -->
                             <div class="cd-timeline-img cd-big bounce-in" style="padding-top:35px; background: url('img/timeline/party_circle_big.png') center center; width: 120px; height: 90px;background-size: cover; font-size: larger">
-                            <h1 style="text-align: center; color: #7478b9; font-family: 'Open Sans', sans-serif; font-weight: bold">두드림</h1>
-                        {% else %}
-                            <!-- sinmyung -->
-                            <div class="cd-timeline-img cd-big bounce-in" style="padding-top:35px; background: url('img/timeline/party_circle_big.png') center center; width: 120px; height: 90px;background-size: cover; font-size: larger">
-                            <h1 style="text-align: center; color: #7478b9; font-family: 'Open Sans', sans-serif; font-weight: bold">신명</h1>
-                        {% endif %}
+                            <h1 style="text-align: center; color: #7478b9; font-family: 'Open Sans', sans-serif; font-weight: bold">
+                                {{ promise_data[year|string][0].party.name }}
+                            </h1>
                             </div>
 
                                 <div class="cd-timeline-content" style="visibility: hidden">
@@ -204,70 +202,69 @@
                                 </div>
 
                                 <div class="cd-timeline-content">
-                                <span style="color: #7478b9; font-weight: bold">{{ data['promise_date'].year }}년 {{ data['promise_date'].month }}월 {{ data['promise_date'].day }}일</span>
-                                    <a href="add_like?title={{ data['promise_title'] }}"><div style="width: 100%">
+                                <span style="color: #7478b9; font-weight: bold">{{ data.date.year }}년 {{ data.date.month }}월 {{ data.date.day }}일</span>
+                                    <a href="add_like?title={{ data.title }}"><div style="width: 100%">
                                         <div style="float: right">
                                         <img src="img/timeline/like_icon.png" width="40px"> <span style="color: #7478b9; font-weight: bold">{{ data['promise_likes'] }}</span>
                                         </div>
                                     </div></a>
                                 <br>
-                                    <h1 class="promise-title">{{ data['promise_title'] }}</h1>
+                                    <h1 class="promise-title">{{ data.title }}</h1>
 
 
 
-                                    <!--<progress value="{{ data['promise_percent'] }}" max="100"></progress> -->
+                                    <!--<progress value="{{ data.percentage }}" max="100"></progress> -->
                                     <div class="progress" style="background-color: white; border: unset; border-radius: 10px" >
                                         <div class="determinate" style="width: {{ data['promise_percent'] }}%; background-color: #7478b9;
                                                 border-radius: 10px;
                                                 border: 2px solid;
-                                                text-align: center"><span style="color: white; font-weight: lighter">{{ data['promise_percent'] }}%</span></div>
+                                                text-align: center"><span style="color: white; font-weight: lighter">{{ data.percentage }}%</span></div>
                                     </div>
 
                                     <!-- <a id="controlButton" href="#" class="progress-button">Start</a> -->
 
 
 
-                                    <p><span style="color: #7478b9; font-weight: bold; font-family: 'Open Sans', sans-serif">{{ data['promise_info'] }}</span></p>
+                                    <p><span style="color: #7478b9; font-weight: bold; font-family: 'Open Sans', sans-serif">{{ data.detail }}</span></p>
 
-                                {% if username == 'dodream' or username == 'sinmyung' %}
-                                    <a href="/account/setting?promise={{ data['promise_title'] }}" class="cd=read-more" style="float: left;">Edit</a>
+                                {% if username in ['dodream', 'sinmyung'] %}
+                                    <a href="{{ url_for('account.setting') }}?promise={{ data.title }}" class="cd=read-more" style="float: left;">Edit</a>
                                 {% endif %}
-                                    <a href="#{{ clever_function(data['promise_title']) }}" class="cd-read-more modal-trigger" style="float: right; color: #7478b9; font-weight: bold">Read more</a>
-
-                                   <!-- <span class="cd-date">{{ data['promise_date'] }}</span> -->
+                                    <a href="#{{ clever_function(data.title) }}" class="cd-read-more modal-trigger" style="float: right; color: #7478b9; font-weight: bold">Read more</a>
+                                
                                 </div>
                             </div>
 
-                            <div id="{{ clever_function(data['promise_title']) }}" class="modal modal-fixed-footer">
+                            <div id="{{ clever_function(data.title) }}" class="modal modal-fixed-footer">
                                 <div class="modal-content">
                                     <div class="slider">
                                         <ul class="slides">
                                             <li>
-                                            <img src="img/checklist/{{ data['promise_date'] }}.png"> <!-- random image -->
+                                            <img src="img/checklist/{{ data.date }}.png"> <!-- random image -->
                                                 <div class="caption left-align">
-                                                    <h3>{{ data['promise_title'] }}</h3>
-                                                    <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
+                                                    <h3>{{ data.title }}</h3>
+                                                    <h5 class="light grey-text text-lighten-3">{{ data.detail }}</h5>
                                                 </div>
                                             </li>
                                             <li>
-                                                <img src="img/checklist/{{ data['promise_date'] }}.png"> <!-- random image -->
+                                                <img src="img/checklist/{{ data.date }}.png"> <!-- random image -->
                                                 <div class="caption left-align">
-                                                    <h3>{{ data['promise_title'] }}</h3>
-                                                    <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
+                                                    <h3>{{ data.title }}</h3>
+                                                    <h5 class="light grey-text text-lighten-3">{{ data.detail }}</h5>
                                                 </div>
                                             </li>
                                             <li>
-                                                <img src="img/checklist/{{ data['promise_date'] }}.png"> <!-- random image -->
+                                                <img src="img/checklist/{{ data.date }}.png"> <!-- random image -->
                                                 <div class="caption right-align">
-                                                    <h3>{{ data['promise_title'] }}</h3>
-                                                    <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
+                                                    <h3>{{ data.title }}</h3>
+                                                    <h5 class="light grey-text text-lighten-3">{{ data.detail }}</h5>
                                                 </div>
                                             </li>
                                             <li>
-                                                <img src="img/checklist/{{ data['promise_date'] }}.png"> <!-- random image -->
+                                                <img src="img/checklist/{{ data.date }}.png"> <!-- random image -->
                                                 <div class="caption center-align">
-                                                    <h3>{{ data['promise_title'] }}</h3>
-                                                    <h5 class="light grey-text text-lighten-3">{{ data['promise_info'] }}</h5>
+                                                    <h3>{{ data.title }}</h3>
+                                                    <h5 class="light grey-text text-lighten-3">{{ data.detail }}</h5>
                                                 </div>
                                             </li>
                                         </ul>
